# torchmx

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Readme.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
dev_docs/Developer API Home/: index.html
dev_docs/config/: index.html
dev_docs/custom_float_cast/: index.html
dev_docs/dtypes/: index.html
dev_docs/env_variables/: index.html
dev_docs/mx_quantization_utils/: index.html
dev_docs/mx_tensor/: index.html
dev_docs/ops/: index.html
dev_docs/quant_api/: index.html
dev_docs/utils/: index.html
docs/: Readme.md  custom_doc_processor.py  pydoc-markdown.yaml
docs/sources/: developer_api_home.md  dtypes.md  env_variables.md  user_api_home.md
examples/: check_mxtensor_ops.py  linear_model_atenir_graph.py  llama_example_atenir_graph.py  quantized_llama_chat.py
examples/mx_matmul/: index.html
examples/quantize_linear/: index.html
examples/quantize_llama/: index.html
results/llama3.1 results/: index.html
search/: search_index.json
tests/: conftest.py  test_config.py  test_custom_float_cast.py  test_mx_quantization.py  test_mx_tensor.py  test_quanti_api.py  test_utils.py
tests/layers/: conftest.py  test_mx_linear.py  test_mx_llama_attention.py  test_mx_qwen2_attention.py
torchmx/: __init__.py  config.py  custom_float_cast.py  dtypes.py  env_variables.py  mx_quantization_utils.py  mx_tensor.py  ops.py  quant_api.py  utils.py
torchmx/layers/: mx_linear.py  mx_llama_attention.py  mx_qwen2_attention.py
user_docs/User API Home/: index.html
(+10 files in other folders)
