[project]
name = "torchmx"
version = "0.1.0"
description = "PyTorch Quantization Framework For OCP MX Datatypes."
readme = "Readme.md"
authors = [
    { name = "Abhijit Balaji", email = "abhijit@rain.ai" },
    { name = "Marios Fournarakis", email = "marios@rain.ai"}
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "attrs>=25.3.0",
    "flaky>=3.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.5",
    "pre-commit>=4.2.0",
    "pydoc-markdown>=4.8.2",
    "pytest>=8.3.5",
    "setuptools>=80.8.0",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "torchao==0.6.1",
    "transformers==4.44.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
